--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,189 +1,317 @@
+:root {
+	--hue-primary: 30;
+	--hue-secondary: 344;
+	--hue-tertiary: 162;
+	--hue-error: 13;
+	--hue-neutral: 38;
+	--hue-neutral-var: 21;
+
+	--chroma: 50%;
+	--chroma-neutral: 37.5%;
+
+	--color-primary: hsl(var(--hue-primary), var(--chroma), var(--tone-base));
+	--color-on-primary: hsl(var(--hue-primary), var(--chroma), var(--tone-on-base));
+	--color-primary-container: hsl(var(--hue-primary), var(--chroma), var(--tone-container));
+	--color-on-primary-container: hsl(var(--hue-primary), var(--chroma), var(--tone-on-container));
+	--color-secondary: hsl(var(--hue-secondary), var(--chroma), var(--tone-base));
+	--color-on-secondary: hsl(var(--hue-secondary), var(--chroma), var(--tone-on-base));
+	--color-secondary-container: hsl(var(--hue-secondary), var(--chroma), var(--tone-container));
+	--color-on-secondary-container: hsl(var(--hue-secondary), var(--chroma), var(--tone-on-container));
+	--color-tertiary: hsl(var(--hue-tertiary), var(--chroma), var(--tone-base));
+	--color-on-tertiary: hsl(var(--hue-tertiary), var(--chroma), var(--tone-on-base));
+	--color-tertiary-container: hsl(var(--hue-tertiary), var(--chroma), var(--tone-container));
+	--color-on-tertiary-container: hsl(var(--hue-tertiary), var(--chroma), var(--tone-on-container));
+	--color-error: hsl(var(--hue-error), var(--chroma), var(--tone-base));
+	--color-on-error: hsl(var(--hue-error), var(--chroma), var(--tone-on-base));
+	--color-error-container: hsl(var(--hue-error), var(--chroma), var(--tone-container));
+	--color-on-error-container: hsl(var(--hue-error), var(--chroma), var(--tone-on-container));
+	--color-surface-dim: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-dim));
+	--color-surface: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface));
+	--color-surface-bright: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-bright));
+	--color-surface-container-1: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-container-1));
+	--color-surface-container-2: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-container-2));
+	--color-surface-container-3: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-container-3));
+	--color-surface-container-4: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-container-4));
+	--color-surface-container-5: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-surface-container-5));
+	--color-on-surface: hsl(var(--hue-neutral), var(--chroma-neutral), var(--tone-on-surface));
+	--color-on-surface-var: hsl(var(--hue-neutral-var), var(--chroma-neutral), var(--tone-on-surface-var));
+	--color-outline: hsl(var(--hue-neutral-var), var(--chroma-neutral), var(--tone-outline));
+	--color-outline-var: hsl(var(--hue-neutral-var), var(--chroma-neutral), var(--tone-outline-var));
+}
+
+.light-mode {
+	--tone-base: 40%;
+	--tone-on-base: 100%;
+	--tone-container: 90%;
+	--tone-on-container: 10%;
+	--tone-surface-dim: 57%;
+	--tone-surface: 98%;
+	--tone-surface-bright: 98%;
+	--tone-surface-container-1: 100%;
+	--tone-surface-container-2: 96%;
+	--tone-surface-container-3: 94%;
+	--tone-surface-container-4: 92%;
+	--tone-surface-container-5: 90%;
+	--tone-on-surface: 10%;
+	--tone-on-surface-var: 30%;
+	--tone-outline: 50%;
+	--tone-outline-var: 80%;
+}
+
+.dark-mode {
+	--tone-base: 80%;
+	--tone-on-base: 20%;
+	--tone-container: 30%;
+	--tone-on-container: 90%;
+	--tone-surface-dim: 6%;
+	--tone-surface: 6%;
+	--tone-surface-bright: 24%;
+	--tone-surface-container-1: 4%;
+	--tone-surface-container-2: 10%;
+	--tone-surface-container-3: 12%;
+	--tone-surface-container-4: 17%;
+	--tone-surface-container-5: 22%;
+	--tone-on-surface: 90%;
+	--tone-on-surface-var: 80%;
+	--tone-outline: 60%;
+	--tone-outline-var: 30%;
+}
+
 html,
 body {
-    margin: 0;
-    height: 100%;
+	margin: 0;
+	height: 100%;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body:before {
-    content: '';
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(-35deg, #9a12b3, #c5eff7);
-    z-index: -1000;
+	content: '';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: -1000;
+}
+
+article>p {
+	max-width: 75em;
+}
+
+.primary {
+	background-color: var(--color-primary);
+	color: var(--color-on-primary);
+}
+
+.primary-container {
+	background-color: var(--color-primary-container);
+	color: var(--color-on-primary-container);
+}
+
+.secondary {
+	background-color: var(--color-secondary);
+	color: var(--color-on-secondary);
+}
+
+.secondary-container {
+	background-color: var(--color-secondary-container);
+	color: var(--color-on-secondary-container);
+}
+
+.tertiary {
+	background-color: var(--color-tertiary);
+	color: var(--color-on-tertiary);
+}
+
+.tertiary-container {
+	background-color: var(--color-tertiary-container);
+	color: var(--color-on-tertiary-container);
+}
+
+.error {
+	background-color: var(--color-error);
+	color: var(--color-on-error);
+}
+
+.error-container {
+	background-color: var(--color-error-container);
+	color: var(--color-on-error-container);
+}
+
+.surface {
+	background-color: var(--color-surface);
+	color: var(--color-on-surface);
 }
 
 .navbar {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .navbar .menu_toggle,
 .navbar .submenu_toggle {
-    opacity: 0;
-    position: fixed;
-    display: none;
+	opacity: 0;
+	position: fixed;
+	display: none;
 }
 
 .navbar .menu_toggle~label,
 .navbar .submenu_toggle~label {
-    position: relative;
-    cursor: pointer;
+	position: relative;
+	cursor: pointer;
 }
 
 .navbar .menu_toggle~label {
-    left: 0;
-    top: 0;
+	left: 0;
+	top: 0;
 }
 
 .navbar .submenu_toggle~label {
-    left: 14px;
+	left: 14px;
 }
 
 .navbar .menu_toggle:checked~label:before {
-    content: '';
-    background: rgba(0, 0, 0, 0.65);
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    transition: background 0.15s;
-    width: 100vw;
+	content: '';
+	background: var(--color-surface-container-3);
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	transition: background 0.15s;
+	width: 100vw;
 }
 
 .navbar .menu_toggle~label svg,
 .navbar .submenu_toggle~label svg {
-    transition: transform 0.15s;
+	transition: transform 0.15s;
 }
 
 .navbar .menu_toggle~label svg {
-    position: fixed;
-    height: 44px;
-    width: 44px;
-    right: 0;
-    top: 0;
-    z-index: 101;
+	position: fixed;
+	height: 44px;
+	width: 44px;
+	right: 0;
+	top: 0;
+	z-index: 101;
 }
 
 .navbar .submenu_toggle~label svg {
-    position: absolute;
-    height: 44px;
-    width: 44px;
+	position: absolute;
+	height: 44px;
+	width: 44px;
 }
 
 .navbar .menu_toggle~label svg path,
 .navbar .submenu_toggle~label svg path {
-    fill: #fff;
+	fill: var(--color-on-surface-var);
 }
 
 .navbar .menu_toggle:checked~label svg:nth-of-type(1),
 .navbar .submenu_toggle:checked~label svg:nth-of-type(1) {
-    transform: scale(0);
+	transform: scale(0);
 }
 
 .navbar .menu_toggle~label svg:nth-of-type(2),
 .navbar .submenu_toggle~label svg:nth-of-type(2) {
-    transform: scale(0);
+	transform: scale(0);
 }
 
 .navbar .menu_toggle:checked~label svg:nth-of-type(2),
 .navbar .submenu_toggle:checked~label svg:nth-of-type(2) {
-    transform: scale(1);
+	transform: scale(1);
 }
 
 .navbar .menu_toggle~.menu>ul,
 .navbar .submenu_toggle~.submenu>ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
 }
 
 .navbar .menu_toggle~.menu {
-    overflow-y: scroll;
-    scrollbar-width: none;
-    transition-duration: var(--delay);
+	overflow-y: scroll;
+	scrollbar-width: none;
+	transition-duration: var(--delay);
 }
 
 .navbar .submenu_toggle~.submenu {
-    display: grid;
-    grid-template-rows: 0fr;
-    transition: grid-template-rows var(--delay);
+	display: grid;
+	grid-template-rows: 0fr;
+	transition: grid-template-rows var(--delay);
 }
 
 .navbar .menu_toggle~.menu::-webkit-scrollbar,
 .navbar .submenu_toggle~.submenu::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .navbar .menu_toggle~.menu {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 100%;
-    top: 0;
-    width: 100%;
-    height: 100%;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	right: 100%;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .navbar .menu_toggle:checked~.menu {
-    transform: translate(100%, 0);
+	transform: translate(100%, 0);
 }
 
 .navbar .menu_toggle~.menu li {
-    line-height: 44px;
-    min-height: 44px;
-    padding: 0 0 0 8px;
-    transform: translateX(-100%);
-    transition-duration: var(--delay);
-    --color: initial;
-    --color-side: var(--color, initial);
-    --color-under: var(--color, inherit);
+	line-height: 44px;
+	min-height: 44px;
+	padding: 0 0 0 8px;
+	transform: translateX(-100%);
+	transition-duration: var(--delay);
+	--color: initial;
+	--color-side: var(--color, initial);
+	--color-under: var(--color, inherit);
 }
 
 .navbar .submenu_toggle:checked~.submenu {
-    grid-template-rows: 1fr;
+	grid-template-rows: 1fr;
 }
 
 .navbar .menu_toggle:checked~.menu>ul>li,
 .navbar .submenu_toggle:checked~.submenu>ul>li.active {
-    transform: translateX(0);
+	transform: translateX(0);
 }
 
 .navbar .menu_toggle~.menu>ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0 0 0 6px;
+	color: var(--color-on-surface);
+	text-decoration: none;
+	padding: 0 0 0 6px;
 }
 
 .navbar .menu_toggle~.menu>ul li:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 8px;
-    height: 100%;
-    transition-duration: inherit;
-    transition-delay: 0.725s;
-    background-color: var(--color-side);
-    z-index: 1;
+	content: '';
+	position: absolute;
+	left: 0;
+	width: 8px;
+	height: 100%;
+	transition-duration: inherit;
+	transition-delay: 0.725s;
+	background-color: var(--color-side);
+	z-index: 1;
 }
 
 .navbar .menu_toggle~.menu>ul a:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 4px;
-    transition: transform 0.2s;
-    transform-origin: left;
-    transform: scaleX(0);
-    background-color: var(--color-under);
-    z-index: 2;
+	content: '';
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 4px;
+	transition: transform 0.2s;
+	transform-origin: left;
+	transform: scaleX(0);
+	background-color: var(--color-under);
+	z-index: 2;
 }
 
 .navbar .menu_toggle~.menu>ul li:hover:not(:has(li:hover))>a:after {
-    transform: scaleX(1);
+	transform: scaleX(1);
 }
