--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,18 +93,26 @@ body {
 }
 
 article .preview-container {
+	/* display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(500px, 50%)); */
 	display: flex;
 	flex-wrap: wrap;
 }
 
-article .sketch {
+article .preview-container .sketch {
 	border-radius: 5px;
 	border: 1px solid var(--color-outline);
 	box-shadow: 1px 1px 3px var(--color-outline);
 }
 
+article .preview-container .data-container {
+	display: grid;
+	grid-template-columns: repeat(2, 20ch);
+	height: min-content;
+}
+
 article p {
-	max-width: 75em;
+	max-width: 75ch;
 }
 
 .primary {
