--- a/src/styles/creative_coding.module.css
+++ b/src/styles/creative_coding.module.css
@@ -3,16 +3,17 @@
 	grid-template-columns: repeat(auto-fit, minmax(500px, 50%)); */
   display: flex;
   flex-wrap: wrap;
-}
 
-.preview-container .sketch {
-  border-radius: 5px;
-  border: 1px solid var(--color-outline);
-  box-shadow: 1px 1px 3px var(--color-outline);
-}
+  .sketch {
+    border-radius: 5px;
+    border: 1px solid var(--color-outline);
+    box-shadow: 1px 1px 3px var(--color-outline);
+  }
 
-.preview-container .data-container {
-  display: grid;
-  grid-template-columns: repeat(2, 20ch);
-  height: min-content;
+  .data-container {
+    margin-left: var(--spacer);
+    display: grid;
+    grid-template-columns: repeat(2, 20ch);
+    height: min-content;
+  }
 }
