--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import url("https: //fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@12..57,400..500&display=swap");
+
 :root {
   --hue-primary: 30;
   --chroma-primary: 75%;
@@ -192,10 +194,39 @@
   }
 }
 
-html,
-body {
-  margin: 0;
+@media only screen and (max-width: 3.75in) {
+  :root {
+    --spacer: 0.1in;
+  }
+}
+
+@media only screen and (min-width: 3.75in) and (max-width: 5.25in) {
+  :root {
+    --spacer: 0.15in;
+  }
+}
+
+@media only screen and (min-width: 5.25in) {
+  :root {
+    --spacer: 0.15in;
+  }
+}
+
+html {
   height: 100%;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+}
+
+body {
+  margin: 0 var(--spacer);
+  height: 100%;
+  font-family: "Roboto Flex", "Trebuchet MS", "Lucida Sans Unicode",
+    "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
+.material-symbols-rounded {
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 48;
 }
