--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -42,3 +42,138 @@
   background-color: var(--color-surface);
   color: var(--color-on-surface);
 }
+
+.display-large {
+  /* Brand Typeface */
+  font-size: 3.5625rem;
+  font-optical-sizing: 57;
+  font-weight: 400;
+  line-height: 4rem;
+  letter-spacing: -0.015625rem;
+}
+
+.display-medium {
+  /* Brand Typeface */
+  font-size: 2.8125rem;
+  font-optical-sizing: 45;
+  font-weight: 400;
+  line-height: 3.25rem;
+  letter-spacing: 0rem;
+}
+
+.display-small {
+  /* Brand Typeface */
+  font-size: 2.25rem;
+  font-optical-sizing: 36;
+  font-weight: 400;
+  line-height: 2.75rem;
+  letter-spacing: 0rem;
+}
+
+.headline-large {
+  /* Brand Typeface */
+  font-size: 2rem;
+  font-optical-sizing: 32;
+  font-weight: 400;
+  line-height: 2.5rem;
+  letter-spacing: 0rem;
+}
+
+.headline-medium {
+  /* Brand Typeface */
+  font-size: 1.75rem;
+  font-optical-sizing: 28;
+  font-weight: 400;
+  line-height: 2.25rem;
+  letter-spacing: 0rem;
+}
+
+.headline-small {
+  /* Brand Typeface */
+  font-size: 1.5rem;
+  font-optical-sizing: 24;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: 0rem;
+}
+
+.title-large {
+  /* Brand Typeface */
+  font-size: 1.375rem;
+  font-optical-sizing: 22;
+  font-weight: 400;
+  line-height: 1.75rem;
+  letter-spacing: 0rem;
+}
+
+.title-medium {
+  /* Plain Typeface */
+  font-size: 1rem;
+  font-optical-sizing: 16;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: 0.009375rem;
+}
+
+.title-small {
+  /* Plain Typeface */
+  font-size: 0.875rem;
+  font-optical-sizing: 14;
+  font-weight: 500;
+  line-height: 1.25rem;
+  letter-spacing: 0.00625rem;
+}
+
+.label-large {
+  /* Plain Typeface */
+  font-size: 0.875rem;
+  font-optical-sizing: 14;
+  font-weight: 500;
+  line-height: 1.25rem;
+  letter-spacing: 0.00625rem;
+}
+
+.label-medium {
+  /* Plain Typeface */
+  font-size: 0.75rem;
+  font-optical-sizing: 12;
+  font-weight: 500;
+  line-height: 1rem;
+  letter-spacing: 0.03125rem;
+}
+
+.label-small {
+  /* Plain Typeface */
+  font-size: 0.6875rem;
+  font-optical-sizing: 11;
+  font-weight: 500;
+  line-height: 1rem;
+  letter-spacing: 0.03125rem;
+}
+
+.body-large {
+  /* Plain Typeface */
+  font-size: 1rem;
+  font-optical-sizing: 16;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.03125rem;
+}
+
+.body-medium {
+  /* Plain Typeface */
+  font-size: 0.875rem;
+  font-optical-sizing: 14;
+  font-weight: 400;
+  line-height: 1.25rem;
+  letter-spacing: 0.015625rem;
+}
+
+.body-small {
+  /* Plain Typeface */
+  font-size: 0.75rem;
+  font-optical-sizing: 12;
+  font-weight: 400;
+  line-height: 1rem;
+  letter-spacing: 0.025rem;
+}
