--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
-@import url("https: //fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@12..57,400..500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@12..57,400..500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 :root {
   --hue-primary: 30;
@@ -150,6 +151,7 @@
     var(--chroma-neutral-var),
     var(--tone-outline-var)
   );
+  --target-size: 3rem;
 }
 
 @media (prefers-color-scheme: light) {
