--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -105,7 +105,7 @@
       right: 100%;
       top: 0;
       width: 100%;
-      height: 100%;
+      /* height: 100%; */
       z-index: 100;
 
       & > ul {
